app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: star-burger-deployment
  labels:
    app: star-burger
spec:
  selector:
    matchLabels:
      app: star-burger
  template:
    metadata:
      labels:
        app: star-burger
    spec:
      containers:
        - name: star-burger-container
          image: airguyone/star-burger-image:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: gunicorn
---
#apiVersion: batch/v1
#kind: Job
#metadata:
#  name: django-migrate
#spec:
#  ttlSecondsAfterFinished: 50
#  backoffLimit: 3
#  template:
#    spec:
#      containers:
#      - name: star-burger-container
#        image: airguyone/star-burger-image:latest
#        imagePullPolicy: IfNotPresent
#        envFrom:
#          - configMapRef:
#              name: star-burger-configmap
#        command: ["python", "manage.py", "migrate", "--no-input"]
#      restartPolicy: Never
