postgresql-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql-state
spec:
  selector:
    matchLabels:
      name: postgresql
  template:
    metadata:
      labels:
        name: postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:12.0-alpine
          ports:
            - containerPort: 5432
