app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: star-burger-service
spec:
  type: NodePort
  selector:
    app: star-burger
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
