postgresql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-serv
  labels:
    name: postgresql
spec:
  type: ClusterIP
  selector:
    name: postgresql
  ports:
    - name: tcp-postgresql
      protocol: TCP
      port: 5432
