app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: star-burger.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: star-burger-service
                port:
                  number: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: star-burger-service
spec:
  type: LoadBalancer
  selector:
    app: star-burger
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
